@startuml
class Status.Bleeding {
- long lastTickTime
- {static} long TICK_INTERVAL_MS
+ void apply(Player)
+ void tick(Player)
+ void undo(Player)
}


class Status.Limping {
+ void apply(Player)
+ void undo(Player)
}

abstract class Status.Status {
- String name
+ String getName()
+ void setName(String)
+ {abstract}void apply(Player)
+ {abstract}void undo(Player)
+ void tick(Player)
}




Status.Status <|-- Status.Bleeding
Status.Status <|-- Status.Limping
@enduml